tests/semantic/fail/sizeof_function_call_with_wrong_arguments.c
int foo(char c) {return c;}

int main(void) {
  return sizeof( foo(1,2) );
}
